...
  Widget build(BuildContext context) {
    return LoginButton(
      isLoading: isLoading,
      icon: const Icon(Icons.person, size: 20),
      label: i18n.login.anonymousSignIn,
      onPressed: onPressed,
      semanticsId: 'anonymous_login_button',
    );
  }
}

